@@ -103,6 +103,7 @@ enum BlockReturnDynX86 {
 	BR_Cycles,
 	BR_Link1,BR_Link2,
 	BR_Opcode,
+	BR_Opcode2,
 	BR_Iret,
 	BR_CallBack,
 	BR_SMCBlock,
@@ -482,6 +483,11 @@ run_block:
 	case BR_Opcode:
 		CPU_CycleLeft+=CPU_Cycles;
 		CPU_Cycles=1;
+		if (!use_dynamic_core_with_paging) dosbox_allow_nonrecursive_page_fault = true;
+		return Safe_CPU_Core_Normal_Run();
+	case BR_Opcode2:
+		CPU_CycleLeft+=CPU_Cycles;
+		CPU_Cycles=2;
 		if (!use_dynamic_core_with_paging) dosbox_allow_nonrecursive_page_fault = true;
 		return Safe_CPU_Core_Normal_Run();
 	case BR_Link1:
